--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
        <!--Hero video section -->
         <section class="hero-video-section">
                 <video class="hero-video" loop autoplay muted playsinline>
-                    <source src="./images/cola video.mp4" type="video/mp4" >
+                    <source src="./images/cola video 1.mp4" type="video/mp4" >
                     Your browser does not support the video tag.
                 </video>
         </section>
